--- a/Heymars/Heymars.csproj
+++ b/Heymars/Heymars.csproj
@@ -7,14 +7,15 @@
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>rocket-svgrepo-com.ico</ApplicationIcon>
+    <ApplicationIcon>heymars.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Content Include="rocket-svgrepo-com.ico" />
+    <Content Include="heymars.ico" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CliWrap" Version="3.5.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Scintilla.NET" Version="5.3.2" />
     <PackageReference Include="Spectre.Console.Cli" Version="0.45.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="System.Text.Json" Version="7.0.1" />
