--- a/Heymars/Heymars.csproj
+++ b/Heymars/Heymars.csproj
@@ -13,12 +13,19 @@
     <Content Include="heymars.ico" />
   </ItemGroup>
   <ItemGroup>
+	  <!--
     <PackageReference Include="CliWrap" Version="3.5.0" />
+	-->
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Scintilla.NET" Version="5.3.2" />
     <PackageReference Include="Spectre.Console.Cli" Version="0.45.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="System.Text.Json" Version="7.0.1" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="CliWrap">
+      <HintPath>..\..\CliWrap\CliWrap\bin\Debug\netcoreapp3.0\CliWrap.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
