--- a/Heymars/Heymars.csproj
+++ b/Heymars/Heymars.csproj
@@ -26,7 +26,7 @@
 	-->
     <PackageReference Include="CliWrap" Version="3.7.1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Scintilla.NET" Version="5.3.2.9" />
+    <PackageReference Include="Scintilla5.NET" Version="5.6.6" />
     <PackageReference Include="Spectre.Console.Cli" Version="0.49.1" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="System.Text.Json" Version="9.0.2" />
